[package]
name = "deno_semver"
version = "0.6.0"
edition = "2021"
description = "Semver for Deno"
homepage = "https://deno.land/"
repository = "https://github.com/denoland/deno_semver"
documentation = "https://docs.rs/deno_semver"
authors = ["the Deno authors"]
license = "MIT"

[dependencies]
monch = "0.5.0"
once_cell = "1.17.0"
serde = { version = "1.0.130", features = ["derive", "rc"] }
thiserror = "2"
url = "2.5.3"
deno_error = "0.5.1"

[dev-dependencies]
pretty_assertions = "1.0.0"
serde_json = { version = "1.0.67", features = ["preserve_order"] }
