[package]
name = "deno_semver"
version = "0.9.1"
edition = "2024"
description = "Semver for Deno"
homepage = "https://deno.land/"
repository = "https://github.com/denoland/deno_semver"
documentation = "https://docs.rs/deno_semver"
authors = ["the Deno authors"]
license = "MIT"

[dependencies]
monch = "0.5.0"
once_cell = "1.17.0"
serde = { version = "1.0.130", features = ["derive", "rc"] }
thiserror = "2"
url = "2.5.3"
deno_error = "0.7.0"
capacity_builder = { version = "0.5.0", features = ["ecow"] }
ecow = { version = "0.2.3", features = ["serde"] }

# todo(dsherret): remove after https://github.com/polazarus/hipstr/pull/39 is released
[target.'cfg(any(unix, windows))'.dependencies]
capacity_builder = { version = "0.5.0", features = ["ecow", "hipstr"] }
hipstr = "0.6"

[dev-dependencies]
divan = "0.1.17"
pretty_assertions = "1.0.0"
serde_json = { version = "1.0.67", features = ["preserve_order"] }

[[bench]]
name = "bench"
harness = false
